--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -6,7 +6,7 @@
   color: #fff;
   display: block;
   font-weight: 300;
-  height: 40px;
+  height: $header-height;
   left: 0;
   margin: 0;
   padding: 0;
@@ -18,7 +18,7 @@
 
   @media all and (max-width: $mobile-width) {
     width: 100vw;
-    height: 50px;
+    height: $header-height-mobile;
     background-color: #333;
     display: flex;
     flex-flow: row nowrap;
